# hyperserver

./: .editorconfig  CHANGELOG.md  README.md  hyperserver.cabal  stress-test.sh
app/: Main.hs
htmx-lib/Components/: QuickSearch.hs  ToDoComponent.hs
htmx-lib/Data/: Builder.hs  Syntax.hs  Tags.hs
htmx-lib/Template/: Class.hs  ElementX.hs  Elements.hs
lib/Control/: Class.hs  HttpApplet.hs  HttpConnection.hs
lib/Data/: Http.hs  Request.hs  Response.hs  Router.hs  Url.hs
lib/Parsers/: FormDataParser.hs  HttpParser.hs  Parser.hs  UrlParser.hs
