cabal-version:      2.4
name:               hyperserver
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khanh Hua
maintainer:         giakhanh2487@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
    , RecordWildCards 
    , LambdaCase
  build-depends:
      base ^>=4.16.4.0
    , bytestring ^>=0.12.0.2
    , transformers ^>=0.6.1.1
  ghc-options:
      -Wall

executable hyperserver
    import: shared-properties
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , http-server
      , htmx-monad
    hs-source-dirs:   app

library htmx-monad
    import: shared-properties
    hs-source-dirs:   htmx-lib
    exposed-modules:  
        Data.Syntax
      , Data.Tags
      , Data.Builder
      , Template.Class
      , Template.Elements
    build-depends:
        http-server
    default-language: Haskell2010

library http-server
    import: shared-properties
    hs-source-dirs:   lib
    build-depends:
        network ^>=3.1.4.0
    exposed-modules:
        Data.Http
      , Data.Router
      , Data.Url
      , Data.Request
      , Data.Response
      , Parsers.Parser
      , Parsers.UrlParser
      , Parsers.FormDataParser
      , Parsers.HttpParser
      , Control.Class
      , Control.HttpConnection
      , Control.HttpApplet

